favicon and visuals
added new favicon and tweaked css

--- a/TEHJR/Views/Home/Index.cshtml
+++ b/TEHJR/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div>
     <h3>Who am I?</h3>
     <hr />
-    <p>I am an aspiring Full Stack developer. I have a passion for developing web applications and have dreams of traveling the world.</p>
+    <p>I am an aspiring Full Stack Web Developer. I have a passion for developing web applications and have dreams of traveling the world.</p>
 </div>
 
 <div>
@@ -31,6 +31,7 @@
                 <li>.NET</li>
                 <li>ASP.NET 4.* & Core</li>
                 <li>Node.js</li>
+                <li>HTML5 and CSS3</li>
             </ul>
         </div>
         <div class="col-md-4 list-group-item">
@@ -54,6 +55,7 @@
                 <li>JSON/XML</li>
                 <li>Functional Javascript</li>
                 <li>JSX</li>
+                <li>SVG</li>
                 <li>Various NPM modules</li>
             </ul>
         </div>
@@ -63,6 +65,7 @@
 
 <div>
     <h3>What have I done?</h3>
+    <hr />
     <h5>double click on a video for fullscreen view.</h5>
     <div id="projects">
         <div class="project">
@@ -71,19 +74,61 @@
             <p>Creates a new string from every multiple of two from an array of items.</p>
         </div>
         <div class="project">
-            <video></video>
-            <h4></h4>
-            <p></p>
+            <video src="~/Videos/fjs-oslo.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>Functional JS - Apply</h4>
+            <p>A function that adds a string to the end of each argument.</p>
         </div>
         <div class="project">
-            <video></video>
-            <h4></h4>
-            <p></p>
+            <video src="~/Videos/node-express.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>Node & Express</h4>
+            <p>Having some fun with handling GET requests in Node.js.</p>
+        </div>
+        <div class="project">
+            <video src="~/Videos/mongo.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>MongoDB</h4>
+            <p>An example of a Node.js app using MongoDB to populate a list through a Handlebars template.</p>
+        </div>
+        <div class="project">
+            <video src="~/Videos/regex-search.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>Regex</h4>
+            <p>A simple client-side regex search function.</p>
+        </div>
+        <div class="project">
+            <video src="~/Videos/json-handlebars.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>JSON & Handlebars</h4>
+            <p>A website to track a players progress. Player data is loaded via a JSON file and templated with Handlebars.</p>
+        </div>
+        <div class="project">
+            <video src="~/Videos/api-call-dynamic-content.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>API requests, HTML & CSS</h4>
+            <p>One of the first websites I made. Very simple and has content loaded via the fake Online Rest API, <a href="https://jsonplaceholder.typicode.com/">JSONPlaceholder</a>.</p>
+        </div>
+        <div class="project">
+            <video src="~/Videos/unity.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <h4>C# & Unity</h4>
+            <p>A funny game I made when messing around with <a href="https://unity3d.com/">Unity</a>.</p>
         </div>
     </div>
+    <br />
+    <p>
+        Of course this isn't everything I've done, but it's a proper sample of the content I've produced. I spend a lot of my time working on coursework, so most of these projects were done over the
+        summer, adding new technologies as I learned them. The lack of ASP.NET Core examples is because most of the technologies I spend my time learning only provide examples in Node.js. I try to
+        make the most of my time, so working with the more mature Node.js platform, with it's abundant documentation and support, felt to be the logical decision. This website is built with ASP.NET 4.5.2.
+    </p>
 </div>
 
 <div>
     <h3>What am I working on?</h3>
-    <ul></ul>
+    <hr />
+    <p>My plans going forward include:</p>
+    <ul>
+        <li>Spend more time studying React</li>
+        <li>Recreate this portfolio site with React & ASP.NET Core</li>
+        <li>Get my <a target="_blank" href="https://www.microsoft.com/en-us/learning/mta-certification.aspx">MTA certification</a></li>
+        <li>Get a job with a company of whom I'd be excited to work for</li>
+    </ul>
+    <p>
+        I very much look forward to entering the professional web development world. Nothing could make me happier than being able to work on creating web applications all day AND get paid for it.
+        Honestly, I already do so much coding everyday that it would be a blessing to be compensated for it.
+    </p>
 </div>
