--- a/TEHJR/Views/Partials/About.cshtml
+++ b/TEHJR/Views/Partials/About.cshtml
@@ -6,27 +6,28 @@
 <p>
     My fixation on web development didn't start until March of 2016. Prior to, my experience with programming in general was nothing to write home about. I started in 2014 with <a target="_blank" href="https://www.codecademy.com/">Codecademy</a>,
     where I first learned Python, but didn't get serious about programming until January 2016, a month before I enrolled in a .NET Applications course made available by my local technical college (Suncoast Technical College).
-    I very quickly learned 'Visual Basic.NET', thanks to thenewbostons tutorials on YouTube, and entered the class with a solid footing. Because of my previous exposure
-    to programming, everything felt very natural. I wrapped up the VB.NET portion of the course (which also included a section on SQL Server) relatively quickly, moving on to my personal favorite programming language, C#.
+    I learned 'Visual Basic.NET', thanks to thenewbostons tutorials on YouTube, and entered the class with a solid footing. Because of my previous exposure
+    to programming, everything felt very natural. I wrapped up the VB.NET portion of the course (which also included a sub-section on SQL & SQL Server) relatively quickly, moving on to my personal favorite programming language, C#.
+    I know Ruby and Python fans alike will scoff at me for this, but I really am a big fan of curly-braced languages.
 </p>
 
 <p>
-    I know Ruby and Python fans alike will scoff at me for this, but I really am a big fan of curly-braced languages. Anyways, I made rapid progress with C# and even presented a ASP.NET Core RC2 project as my 2nd quarter project.
+    Anyways, I made rapid progress with C# and even presented a ASP.NET Core RC2 project as my 2nd quarter project.
     ASP.NET Core RC2 only released the very week we began working on our projects, so you can imagine the frustration I went through as a relatively junior programmer trying to figure out this literally
     bleeding edge tech. I went in with no prior knowledge of ASP.NET or even MVC, and I came out a changed man. A man that really loves working with web technologies.
 </p>
 
 <p>
-    The summer of 2016 was spent learning all of the stuff that makes ASP.NET Core work. I learned javascript in a couple of days and discovered functional javascript which was initial difficult to get my head
-    around, ended up completely changing how I think about programming for the better. I also completed nearly all the workshops available at <a target="_blank" href="http://nodeschool.io/">Nodeschool.io</a>,
+    The summer of 2016 was spent learning all of the stuff that makes ASP.NET Core work. I learned javascript in a couple of days and discovered functional javascript, which was initially difficult to wrap my head
+    around, and ended up completely changing how I think about programming for the better. I also completed nearly all the workshops available at <a target="_blank" href="http://nodeschool.io/">Nodeschool.io</a>,
     which I found very intuitive and incredibly enjoyable. I moved on and started creating some Node.js websites using Express, Handlebars.js, MongoDB (which I very much enjoyed using), and SASS/SCSS.
-    Towards the end of summer I decided to pick up a web framework, and initially started with Angular 2, but found React to have a much more pleasing syntax, and of course, better job oppurtunities.
+    Towards the end of summer I decided to pick up a web framework, and initially started with Angular 2, but found React to have a much more pleasing syntax, and at the time, better job oppurtunities.
 </p>
 
 <p>
-    Catching up to the current day, I have resumed my .NET Applications class and am continuing to make rapid progress in the course. At the current pace I'm working at, I am set to complete all of
+    Catching up to the current day, I have resumed my .NET Applications class. At the current pace I'm working at, I am set to complete all of
     the required coures work and recieve my <a target="_blank" href="https://www.microsoft.com/en-us/learning/mta-certification.aspx">MTA certification</a> by the end of the 3rd quarter of 2016. I am currently seeking remote employment
-    because of family circumstances that may disrupt my future goals. When hired I will switch from the full-time student course to the part-time student course so that I will be able to required number
+    because of family circumstances that may disrupt my future goals. When hired I will switch from the full-time student course to the part-time student course so that I will be able to work the required number
     of hours requested by my future employer. If you happen to be a potential employer, please call or message me at:
 </p>
 <address class="right-side">@Html.Partial("~/Views/Partials/MyInfo.cshtml")</address>
