--- a/TEHJR/Views/Shared/_Layout.cshtml
+++ b/TEHJR/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             <div class="row row-nav">
                 <div class="col-md-6 col-md-offset-3 col-xs-10">
                     <nav class="btn-group nav-btns">
-                        <button id="home" class="btn" onclick="Home()">Home</button>
+                        <button id="home" class="btn btn-current" onclick="Home()">Home</button>
                         <button id="about" class="btn" onclick="About()">About</button>
                         <button id="contact" class="btn" onclick="Contact()">Contact</button>
                     </nav>
