--- a/TEHJR/Content/Site.css
+++ b/TEHJR/Content/Site.css
@@ -5,8 +5,9 @@
 
 hr {
      border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #204B20, rgba(0, 0, 0, 0));
+    height: 0.4em;
+    background-color: #8FB68F;
+    box-shadow: 0 0.1em 0.4em black inset;
 }
 
 a {
@@ -26,6 +27,8 @@ a:visited {
 
 /*Content settings*/
 #content {
+    box-shadow: 0 0.2em 0.5em black inset;
+
     background-color: #93BFBF;
     padding: 0;
     border: 1em solid black;
@@ -49,6 +52,7 @@ a:visited {
 
 #content>div:nth-of-type(2n+0) {
     background-color: #669966;
+    box-shadow: 0 0.1em 0.4em black inset;
 }
 
 #content>h2, #content>h3 {
@@ -69,6 +73,7 @@ a:visited {
 
 #content>p:nth-child(even) {
     background-color: #537D53;
+    box-shadow: 0 0.1em 0.4em black inset;
 }
 
 #content>div>div {
@@ -81,24 +86,27 @@ a:visited {
     display: flex;
     padding: 1em;
     justify-content: center;
+    box-shadow: 0 0.2em 0.4em black;
 }
 
 .list-spread>li {
-    border: 1px solid #452409;
-
+    border: 0.1em solid #452409;
     background-color: #7E5635;
     color: #E4C9B2;
     margin: 0.2em;
+    box-shadow: 0 0.1em 0.4em black;
 }
 
 .list-group {
     padding: 1em;
+    box-shadow: 0 0.2em 0.4em black;
 }
 
 .list-group-item {
     border-color: #452409;
     background-color: #7E5635;
     color: #E4C9B2;
+    box-shadow: 0 0.1em 0.4em black;
 }
 
 .list-group-item-heading {
@@ -116,14 +124,15 @@ a:visited {
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
+    box-shadow: 0 0.2em 0.4em black;
 }
 
 #projects>.project {
     margin: 0.5em;
-    border: 1px solid #452409;
+    border: 0.1em solid #452409;
     background-color: #7E5635;
-    height: 20em;
     width: 15em;
+    box-shadow: 0 0.1em 0.4em black;
 }
 
 #projects>.project>video {
@@ -173,6 +182,7 @@ a:visited {
 .btn-group>.btn-current {
     color: #537D53;
     background-color: #375A37;
+    box-shadow: 0 0.1em 0.4em black inset;
 }
 
 .row-nav::after {
@@ -210,6 +220,7 @@ a:visited {
     width: 100%;
 }
 
+/*Video*/
 #video-container {
     display: none;
     z-index: 1;
@@ -223,8 +234,8 @@ a:visited {
 }
 
 #video-container>button {
+    border: 0.1em solid #333333;
     color: white;
-    border: none;
     background: inherit;
     width: 10em;
     height: 2.5em;
@@ -280,5 +291,11 @@ a:visited {
     .row-nav::after {
         margin-left: -3%;
         width: 90%;
+    }
+}
+
+@media (min-width: 970px) {
+    #main-content {
+        margin-top: 2em;
     }
 }
