--- a/TEHJR/Views/Home/About.cshtml
+++ b/TEHJR/Views/Home/About.cshtml
@@ -1,4 +1,6 @@
-﻿<h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
-
+﻿<div>
+    <h2>@ViewBag.Title</h2>
+    <h3>@ViewBag.Message</h3>
+</div>
+<img id="top-img" src="~/Images/house.svg" />
 @Html.Partial("~/Views/Partials/About.cshtml")
