--- a/TEHJR/Views/Home/Contact.cshtml
+++ b/TEHJR/Views/Home/Contact.cshtml
@@ -10,5 +10,13 @@
             Sarasota, FL 34232<br />
             @Html.Partial("~/Views/Partials/MyInfo.cshtml")
         </address>
+        <br />
+        <h3>Availability</h3>
+        <p>
+            3pm-8pm Weekdays
+        </p>
+        <p>
+            9am-8pm Weekends
+        </p>
     </div>
 </div>
