--- a/TEHJR/Views/Home/Index.cshtml
+++ b/TEHJR/Views/Home/Index.cshtml
@@ -3,12 +3,14 @@
     <p>
         My name is Thomas.
     </p>
+    <img id="top-img" src="~/Images/hill-tree.svg" />
 </div>
 
 <div>
     <h3>Who am I?</h3>
+    <img id="face" src="~/Images/my-face.svg" />
     <hr />
-    <p>I am an aspiring Full Stack Web Developer. I have a passion for developing web applications and have dreams of traveling the world.</p>
+    <p>I am an aspiring Full Stack Web Developer. I have a passion for developing web applications and dreams of traveling the world.</p>
 </div>
 
 <div>
@@ -18,7 +20,7 @@
     <div>
         <ul class="list-inline list-spread">
             <li class="panel panel-title">C#</li>
-            <li class="panel panel-title">Javascript</li>
+            <li class="panel panel-title">JavaScript</li>
             <li class="panel panel-title">VB.NET</li>
         </ul>
     </div>
@@ -53,7 +55,7 @@
             <h4 class="list-group-item-heading">The Little Ones</h4>
             <ul>
                 <li>JSON/XML</li>
-                <li>Functional Javascript</li>
+                <li>Functional JavaScript</li>
                 <li>JSX</li>
                 <li>SVG</li>
                 <li>Various NPM modules</li>
@@ -111,9 +113,10 @@
     </div>
     <br />
     <p>
-        Of course this isn't everything I've done, but it's a proper sample of the content I've produced. I spend a lot of my time working on coursework, so most of these projects were done over the
+        This is not everything I've done, but it is a proper sample of the content I've produced. I spend a lot of my time working on coursework, so most of these projects were done over the
         summer, adding new technologies as I learned them. The lack of ASP.NET Core examples is because most of the technologies I spend my time learning only provide examples in Node.js. I try to
-        make the most of my time, so working with the more mature Node.js platform, with it's abundant documentation and support, felt to be the logical decision. This website is built with ASP.NET 4.5.2.
+        make the most of my time, so working with the more mature Node.js platform, with its abundant documentation and support, felt to be the logical decision. As a side note,
+        this website is built on ASP.NET 4.5.2.
     </p>
 </div>
 
@@ -122,13 +125,12 @@
     <hr />
     <p>My plans going forward include:</p>
     <ul>
-        <li>Spend more time studying React</li>
-        <li>Recreate this portfolio site with React & ASP.NET Core</li>
-        <li>Get my <a target="_blank" href="https://www.microsoft.com/en-us/learning/mta-certification.aspx">MTA certification</a></li>
-        <li>Get a job with a company of whom I'd be excited to work for</li>
+        <li>Spend more time studying React.</li>
+        <li>Recreate this portfolio site with React & ASP.NET Core.</li>
+        <li>Get my <a target="_blank" href="https://www.microsoft.com/en-us/learning/mta-certification.aspx">MTA certification</a>.</li>
+        <li>Get a job with a company of whom I'd be excited to work for.</li>
     </ul>
     <p>
-        I very much look forward to entering the professional web development world. Nothing could make me happier than being able to work on creating web applications all day AND get paid for it.
-        Honestly, I already do so much coding everyday that it would be a blessing to be compensated for it.
-    </p>
+        I very much look forward to entering the professional web development world. Nothing could make me happier than being able to work on creating web applications with a team of like-minded
+        individuals.
 </div>
