--- a/TEHJR/Views/Shared/_Layout.cshtml
+++ b/TEHJR/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     </div>
     <div id="video-container">
         <button onclick="closeVideo()">X</button>
-        <video id="vidya" src="" typeof="video/WebM" controls></video>
+        <video id="vidya" src="" typeof="video/WebM" controls muted></video>
     </div>
 
     @Scripts.Render("~/Scripts/getPartialViews.js")
