Video support detection
now works on Edge browser, webm and mp4 formats supported

--- a/TEHJR/Views/Home/Index.cshtml
+++ b/TEHJR/Views/Home/Index.cshtml
@@ -71,42 +71,42 @@
     <h5>double click on a video for fullscreen view.</h5>
     <div id="projects">
         <div class="project">
-            <video src="~/Videos/fjs-fisken.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/fisken.png" data-video="/Videos/fjs-fisken." ondblclick="openVideo(this.dataset.video)" />
             <h4>Functional JS - Recursion</h4>
             <p>Creates a new string from every multiple of two from an array of items.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/fjs-oslo.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/oslo.png" data-video="/Videos/fjs-oslo." ondblclick="openVideo(this.dataset.video)" />
             <h4>Functional JS - Apply</h4>
             <p>A function that adds a string to the end of each argument.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/node-express.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/node.png" data-video="/Videos/node-express." ondblclick="openVideo(this.dataset.video)" />
             <h4>Node & Express</h4>
             <p>Having some fun with handling GET requests in Node.js.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/mongo.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/mongo.png" data-video="/Videos/mongo." ondblclick="openVideo(this.dataset.video)" />
             <h4>MongoDB</h4>
             <p>An example of a Node.js app using MongoDB to populate a list through a Handlebars template.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/regex-search.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/regex.png" data-video="/Videos/regex-search." ondblclick="openVideo(this.dataset.video)" />
             <h4>Regex</h4>
             <p>A simple client-side regex search function.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/json-handlebars.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/json.png" data-video="/Videos/json-handlebars." ondblclick="openVideo(this.dataset.video)" />
             <h4>JSON & Handlebars</h4>
             <p>A website to track a players progress. Player data is loaded via a JSON file and templated with Handlebars.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/api-call-dynamic-content.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/api.png" data-video="/Videos/api-call-dynamic-content." ondblclick="openVideo(this.dataset.video)" />
             <h4>API requests, HTML & CSS</h4>
             <p>One of the first websites I made. Very simple and has content loaded via the fake Online Rest API, <a href="https://jsonplaceholder.typicode.com/">JSONPlaceholder</a>.</p>
         </div>
         <div class="project">
-            <video src="~/Videos/unity.webm" type="video/WebM" ondblclick="openVideo(this.src)">Your browser doesn't support HTML5 video.</video>
+            <img class="video" src="~/Videos/Posters/unity.png" data-video="/Videos/unity." ondblclick="openVideo(this.dataset.video)" />
             <h4>C# & Unity</h4>
             <p>A funny game I made when messing around with <a href="https://unity3d.com/">Unity</a>.</p>
         </div>
