--- a/TEHJR/Views/Shared/_Layout.cshtml
+++ b/TEHJR/Views/Shared/_Layout.cshtml
@@ -35,9 +35,9 @@
         </div>
     </div>
     <div id="video-container">
-        <button onclick="closeVideo()">X</button>
-        <video id="vidya" src="" typeof="video/WebM" controls muted></video>
+        <video id="vidya" src="" type="" controls muted></video>
     </div>
+    <button id="close" onclick="closeVideo()">X</button>
 
     @Scripts.Render("~/Scripts/getPartialViews.js")
     @Scripts.Render("~/bundles/jquery")
