--- a/TEHJR/Content/Site.css
+++ b/TEHJR/Content/Site.css
@@ -149,7 +149,7 @@ a:visited {
     box-shadow: 0 0.1em 0.4em black;
 }
 
-#projects>.project>video {
+#projects>.project>.video {
     width: 100%;
 }
 
@@ -247,15 +247,15 @@ a:visited {
     height: 95%;
 }
 
-#video-container>button {
-    border: 0.1em solid #333333;
-    color: white;
-    background: inherit;
-    width: 10em;
-    height: 2.5em;
+#close {
+    display: none;
     position: absolute;
-    left: 87vw;
-    top: 1vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
 }
 
 #vidya {
@@ -264,6 +264,18 @@ a:visited {
     width: 98%;
     height: 92%;
     margin: 3% 1%;
+}
+
+source {
+    content: "";
+    display: inline-block;
+    background-color: #FFF;
+    position: absolute;
+    z-index: 1;
+    width: 20em;
+    height: 10em;
+    top: 0;
+    left: 0;
 }
 
 /*Contact Page*/
